fix margin spacing problem for turn block div in html page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,11 @@ div {
     justify-content: center;
 }
 
+#turn {
+    width: 100%;
+    margin:  40px 50px 5px 0px;
+}
+
 .button {
     border-radius: 30%;
     background-color: rgba(0, 0, 0, 0);
@@ -37,12 +42,24 @@ div {
     margin: 10px;
     transition: all 0.5s;
 }
+
 .button::after {
     content:attr(data-type);
     font-size: 1.5rem;
     font-family: 'Roboto', sans-serif;
     color: #445361;
     position: relative;
+}
+
+/* .btn-rock {
+    border-color: red;
+    color: rgb(0, 255, 76);
+} */
+
+.btn-rock:active,
+.btn-rock:hover {
+    background-color: black;
+    color: rgba(0, 0, 0, 0);
 }
 
 .refresh {
